k8s/manifests/fleet/pomerium-ingress.yaml
# Fleet UI - Pomerium IAP (mdm-admin group required)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ui
  annotations:
    ingress.pomerium.io/policy: |
      - allow:
          or:
            - claim/groups: /mdm-admin
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/set_response_headers: |
      Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
      X-Frame-Options: SAMEORIGIN
      X-Content-Type-Options: nosniff
      X-XSS-Protection: 1; mode=block
      Referrer-Policy: same-origin
spec:
  ingressClassName: pomerium
  rules:
  - host: nexus.harvestasya.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleet-service
            port:
              number: 8080
